# frilvault

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.ko.md  README.md
apps/frilvault-cli/: Cargo.toml
apps/frilvault-cli/src/: app.rs  main.rs  output.rs  tests.rs
apps/frilvault-cli/src/cli/: add.rs  attach.rs  delete.rs  explorer.rs  format.rs  gitignore.rs  health.rs  list.rs  mod.rs  repair.rs  resolve_uri.rs  search.rs  stats.rs  sync.rs  update.rs
apps/frilvault-cli/src/command/: add.rs  attach.rs  delete.rs  doctor.rs  explorer.rs  gitignore.rs  list.rs  mod.rs  repair.rs  resolve_uri.rs  search.rs  stats.rs  sync.rs  update.rs
crates/frilvault-core/: Cargo.toml
crates/frilvault-core/src/: constants.rs  lib.rs
crates/frilvault-core/src/app/: frilvault.rs  mod.rs
crates/frilvault-core/src/cache/: note_cache.rs  vault_context.rs
crates/frilvault-core/src/error/: errors.rs  mod.rs
crates/frilvault-core/src/note/: attachment_repository.rs  entity.rs  mod.rs  note_repository.rs  note_service.rs  service.rs
crates/frilvault-core/src/note/dto/: mod.rs  (+4 more)
crates/frilvault-core/src/parser/: json_parser.rs  mod.rs  note_parser.rs  yaml_parser.rs
crates/frilvault-core/src/runtime/: cache_stats.rs  mod.rs  note_cache.rs  vault_context.rs
crates/frilvault-core/src/storage/: mod.rs  note_file_record.rs  repository.rs  yaml_repository.rs
crates/frilvault-core/src/symbol/: location.rs  marker.rs  mod.rs  resolver.rs
crates/frilvault-core/src/tests/: attachment_test.rs  frilvault_app_test.rs  gitignore_test.rs  helper.rs  mod.rs  note_cache_test.rs  note_entity_test.rs  note_resolver_test.rs  note_service_test.rs  note_uri_test.rs  parser_test.rs  repair_engin_test.rs  repository_test.rs  symbol_resolver_test.rs  vault_context_test.rs  workspace_index_repository_test.rs  workspace_index_test.rs  workspace_repository_test.rs  workspace_service_test.rs  yaml_parser_test.rs  yaml_repository_test.rs
crates/frilvault-core/src/uri/: mod.rs  note_uri.rs
crates/frilvault-core/src/workspace/: content_match.rs  diff.rs  gitignore.rs  index.rs  mod.rs  models.rs  path_resolver.rs  repair_engine.rs  watcher.rs  workspace_index_repository.rs  workspace_repository.rs
crates/frilvault-node/: Cargo.toml
crates/frilvault-node/src/: lib.rs
(+160 files in other folders)
