[package]
name = "frilvault-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "flvt"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
serde_json = "1"


frilvault-core = { path = "../../crates/frilvault-core" }