[package]
name = "frilvault-cli"
version = "0.1.0"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "flvt"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"

uuid = { workspace = true, features = ["v4", "serde"] }

frilvault-core = { path = "../../crates/frilvault-core" }