[package]
name = "frilvault-core"
version = "0.1.0"

edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["v4", "serde"] }
thiserror.workspace = true

serde_yml = "0.0.13"