[package]
name = "frilvault-node"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
frilvault-core = { path = "../frilvault-core" }
napi = { version = "3", default-features = false, features = ["dyn-symbols", "napi8"] }
napi-derive = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde"] }
